[package]
name = "vermillion"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Tazmilur Saad"]
description = "Fastest stochastic simulator in the west."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8.5"}
clap = {version = "3.1.18", features = ["derive"]}
polars = {version = "0.19"}
ndarray = {version = "0.15.4"}
csv = {version = "1.1.4"}

[profile.release]
debug = true
